deploy/k8s/overlays/aks-poc/core-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core
spec:
  template:
    spec:
      containers:
        - name: core
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
