deploy/k8s/overlays/aks-poc/private-machine-service-delete.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-private-machine
$patch: delete
